--- a/css/styles.less
+++ b/css/styles.less
@@ -305,10 +305,18 @@ a{
 	margin:15px 0;
 }
 
+.hint{
+	.cls-1{fill:#f2e9d3;}.cls-2{fill:#202020;}
+	width: 150px;
+	position: fixed;
+	display: none;
+	opacity: 0;
+}
 
 .catalog__item__price{
 	.f2;
-	.grey;
+	// .grey;
+	color:@blue;
 }
 
 .catalog__item__price__and__like{
@@ -1833,7 +1841,7 @@ footer{
 	.rel;
 	.prev__item__card , .next__item__card{
 		position: absolute;
-		top:50%;
+		top:35%;
 	}
 	.prev__item__card{
 		left:-80px;
@@ -1847,7 +1855,7 @@ footer{
 	z-index: 5;
 }
 .main__popular .c1{
-	margin:5px;
+	margin:10px;
 }
 .instagram__slider{
 	display: grid;
