--- a/css/styles.less
+++ b/css/styles.less
@@ -2014,6 +2014,11 @@ footer{
 		margin-bottom:10px;
 	}
 }
+.info__menu{
+	.active{
+		color:@mc !important;
+	}
+}
 .personal__data{
 	margin-left:-@m;
 	form{
@@ -2648,7 +2653,7 @@ footer{
 	.giraffe__main{
 		width:50vw;
 		margin-top:@m;
-		margin:@m 0 0 14vw;
+		margin:0;
 	}
 	.lets__talk__second .whale{
 		width:50vw;
@@ -3100,4 +3105,77 @@ footer{
 		}
 	}
 }
+.bean{
+	display:block;
+	.positionA;
+	width: 60%;
+}
+.main__about__wrapper{
+	.rel;
+}
+.bean1{
+	top:10%;
+	left:10%;
+	animation: bean1 90s linear infinite;
+}
+.bean2{
+	top:45%;
+	left:40%;
+	animation: bean2 90s linear infinite;
+}
+.bean3{
+	top:70%;
+	left:15%;
+	animation: bean3 90s linear infinite;
+}
+.main__about__wrapper h2{
+	font-size:3rem !important;
+	
+}
+}
+@keyframes bean1 {
+	0%{
+		transform:rotateZ(0deg);
+	}
+	33%{
+		transform:rotateZ(180deg) translateX(20px) translateY(20px);
+	}
+	66%{
+		transform:rotateZ(270deg) translateX(-20px) translateY(-40px);
+	}	
+	100%{
+	transform:rotateZ(360deg) translateX(0px) translateY(0px);
+	}
+}
+
+
+@keyframes bean2 {
+	0%{
+		transform:rotateZ(0deg);
+	}
+	33%{
+		transform:rotateZ(-180deg) translateX(-3px) translateY(-6px);
+	}
+	66%{
+		transform:rotateZ(-270deg) translateX(2px) translateY(4px);
+	}	
+	100%{
+	transform:rotateZ(-360deg) translateX(0px) translateY(0px);
+	}
+}
+
+@keyframes bean3 {
+	0%{
+		transform:rotateZ(0deg);
+	}
+	33%{
+		transform:rotateZ(180deg) translateX(7px) translateY(7px);
+	}
+	66%{
+		transform:rotateZ(270deg) translateX(-3px) translateY(-4px);
+	}	
+	100%{
+	transform:rotateZ(360deg) translateX(0px) translateY(0px);
+	}
+
 }
